<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_textview_display_numbers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="end"
        android:maxLength="20"
        android:text=""
        android:textColor="@color/colorOfText"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="180dp"
        app:layout_constraintHeight_min="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/main_textview_display_everything"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:lineSpacingExtra="2dp"
        android:layout_marginBottom="5dp"
        android:gravity="end|center"
        android:scrollbars="vertical"
        android:text=""
        android:textColor="@color/colorOfText"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/main_button_multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="110dp"
        app:layout_constraintHeight_min="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_textview_display_numbers"
        tools:layout_editor_absoluteX="1dp" />

    <Button
        android:id="@+id/main_button_clear"
        style="@style/FunctionButtons"
        android:text="@string/ac"
        app:layout_constraintBottom_toTopOf="@id/main_button_seven"
        app:layout_constraintEnd_toStartOf="@id/main_button_percent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_textview_display_numbers"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/main_button_percent"
        style="@style/FunctionButtons"
        android:text="@string/percent"
        app:layout_constraintBottom_toTopOf="@id/main_button_eight"
        app:layout_constraintEnd_toStartOf="@id/main_button_square_root"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/main_button_clear"
        app:layout_constraintTop_toBottomOf="@id/main_textview_display_numbers"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/main_button_square_root"
        style="@style/FunctionButtons"
        android:text="@string/square_root"
        app:layout_constraintBottom_toTopOf="@id/main_button_nine"
        app:layout_constraintEnd_toStartOf="@id/main_button_multiply"
        app:layout_constraintStart_toEndOf="@id/main_button_percent"
        app:layout_constraintTop_toBottomOf="@id/main_textview_display_numbers"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/main_button_multiply"
        style="@style/FunctionButtons"
        android:text="@string/multiply"
        app:layout_constraintBottom_toTopOf="@id/main_button_divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/main_button_square_root"
        app:layout_constraintTop_toBottomOf="@id/main_textview_display_numbers"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/main_button_seven"
        style="@style/NumberButtons"
        android:text="@string/seven"
        app:layout_constraintBottom_toTopOf="@id/main_button_four"
        app:layout_constraintEnd_toStartOf="@id/main_button_eight"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_button_clear" />

    <Button
        android:id="@+id/main_button_eight"
        style="@style/NumberButtons"
        android:text="@string/eight"
        app:layout_constraintBottom_toTopOf="@id/main_button_five"
        app:layout_constraintEnd_toStartOf="@id/main_button_nine"
        app:layout_constraintStart_toEndOf="@id/main_button_seven"
        app:layout_constraintTop_toBottomOf="@id/main_button_percent" />

    <Button
        android:id="@+id/main_button_nine"
        style="@style/NumberButtons"
        android:text="@string/nine"
        app:layout_constraintBottom_toTopOf="@id/main_button_six"
        app:layout_constraintEnd_toStartOf="@id/main_button_divide"
        app:layout_constraintStart_toEndOf="@id/main_button_eight"
        app:layout_constraintTop_toBottomOf="@id/main_button_square_root" />

    <Button
        android:id="@+id/main_button_divide"
        style="@style/FunctionButtons"
        android:text="@string/divide"
        app:layout_constraintBottom_toTopOf="@id/main_button_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/main_button_nine"
        app:layout_constraintTop_toBottomOf="@id/main_button_multiply" />

    <Button
        android:id="@+id/main_button_four"
        style="@style/NumberButtons"
        android:text="@string/four"
        app:layout_constraintBottom_toTopOf="@id/main_button_one"
        app:layout_constraintEnd_toStartOf="@id/main_button_five"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_button_seven" />

    <Button
        android:id="@+id/main_button_five"
        style="@style/NumberButtons"
        android:text="@string/five"
        app:layout_constraintBottom_toTopOf="@id/main_button_two"
        app:layout_constraintEnd_toStartOf="@id/main_button_six"
        app:layout_constraintStart_toEndOf="@id/main_button_four"
        app:layout_constraintTop_toBottomOf="@id/main_button_eight" />

    <Button
        android:id="@+id/main_button_six"
        style="@style/NumberButtons"
        android:text="@string/six"
        app:layout_constraintBottom_toTopOf="@id/main_button_three"
        app:layout_constraintEnd_toStartOf="@id/main_button_minus"
        app:layout_constraintStart_toEndOf="@id/main_button_five"
        app:layout_constraintTop_toBottomOf="@id/main_button_nine" />

    <Button
        android:id="@+id/main_button_minus"
        style="@style/FunctionButtons"
        android:text="@string/minus"
        app:layout_constraintBottom_toTopOf="@id/main_button_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/main_button_six"
        app:layout_constraintTop_toBottomOf="@id/main_button_divide" />

    <Button
        android:id="@+id/main_button_one"
        style="@style/NumberButtons"
        android:text="@string/one"
        app:layout_constraintBottom_toTopOf="@id/main_button_zero"
        app:layout_constraintEnd_toStartOf="@id/main_button_two"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_button_four" />

    <Button
        android:id="@+id/main_button_two"
        style="@style/NumberButtons"
        android:text="@string/two"
        app:layout_constraintBottom_toTopOf="@id/main_button_dot"
        app:layout_constraintEnd_toStartOf="@id/main_button_three"
        app:layout_constraintStart_toEndOf="@id/main_button_one"
        app:layout_constraintTop_toBottomOf="@id/main_button_five" />

    <Button
        android:id="@+id/main_button_three"
        style="@style/NumberButtons"
        android:text="@string/three"
        app:layout_constraintBottom_toTopOf="@id/main_button_turn_to_negative"
        app:layout_constraintEnd_toStartOf="@id/main_button_plus"
        app:layout_constraintStart_toEndOf="@id/main_button_two"
        app:layout_constraintTop_toBottomOf="@id/main_button_six" />

    <Button
        android:id="@+id/main_button_plus"
        style="@style/FunctionButtons"
        android:text="@string/plus"
        app:layout_constraintBottom_toTopOf="@id/main_button_equals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/main_button_three"
        app:layout_constraintTop_toBottomOf="@id/main_button_minus" />

    <Button
        android:id="@+id/main_button_zero"
        style="@style/NumberButtons"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/main_button_dot"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_button_one" />

    <Button
        android:id="@+id/main_button_dot"
        style="@style/NumberButtons"
        android:text="@string/dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/main_button_turn_to_negative"
        app:layout_constraintStart_toEndOf="@id/main_button_zero"
        app:layout_constraintTop_toBottomOf="@id/main_button_two" />

    <Button
        android:id="@+id/main_button_turn_to_negative"
        style="@style/NumberButtons"
        android:text="@string/plus_minus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/main_button_equals"
        app:layout_constraintStart_toEndOf="@id/main_button_dot"
        app:layout_constraintTop_toBottomOf="@id/main_button_three" />

    <Button
        android:id="@+id/main_button_equals"
        style="@style/FunctionButtons"
        android:text="@string/equals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/main_button_turn_to_negative"
        app:layout_constraintTop_toBottomOf="@id/main_button_plus" />


</androidx.constraintlayout.widget.ConstraintLayout>